# OpenCV-Demo

./: README.md
OpenCV/: CMakeLists.txt  CMakeLists.txt.user.c011a5d  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_2.cpp  mainwindow_2.h  mainwindow_2.ui  mainwindow_3.cpp  mainwindow_3.h  mainwindow_3.ui  mainwindow_4.cpp  mainwindow_4.h  mainwindow_4.ui  mainwindow_5.cpp  mainwindow_5.h  mainwindow_5.ui  mainwindow_6.cpp  mainwindow_6.h  mainwindow_6.ui  mainwindow_7.cpp  mainwindow_7.h  mainwindow_7.ui  workthread.cpp  workthread.h
opencv_cpp/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
